--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,8 @@
         "variant": "cpp",
         "vector": "cpp",
         "algorithm": "cpp",
-        "execution": "cpp"
-    }
+        "execution": "cpp",
+        "iomanip": "cpp"
+    },
+    "CodeGPT.apiKey": "Google AI Studio"
 }
