--- a/Main copy 2/Makefile
+++ b/Main copy 2/Makefile
@@ -13,15 +13,6 @@ SOURCES = main.cpp Biblioteka.cpp Czytelnik.cpp funkcje.cpp Ksiazka.cpp Rejestra
 # Pliki obiektowe (zamiana .cpp na .o)
 OBJECTS = $(SOURCES:.cpp=.o)
 
-# Pliki źródłowe testów
-TEST_SOURCES = test_biblioteka.cpp
-
-# Pliki obiektowe testów
-TEST_OBJECTS = $(TEST_SOURCES:.cpp=.o)
-
-# Plik wykonywalny testów
-TEST_EXECUTABLE = test_output
-
 # Reguła domyślna
 all: $(EXECUTABLE)
 
@@ -33,16 +24,6 @@ $(EXECUTABLE): $(OBJECTS)
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
-# Reguła kompilacji testów
-test: $(TEST_EXECUTABLE)
-
-$(TEST_EXECUTABLE): $(OBJECTS) $(TEST_OBJECTS)
-	$(CXX) $(OBJECTS) $(TEST_OBJECTS) -lgtest -lgtest_main -pthread -o $(TEST_EXECUTABLE)
-
-# Kompilacja każdego pliku źródłowego testów
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
 # Czyszczenie plików obiektowych i pliku wykonywalnego
 clean:
-	rm -f $(OBJECTS) $(TEST_OBJECTS) $(EXECUTABLE) $(TEST_EXECUTABLE)
+	rm -f $(OBJECTS) $(EXECUTABLE)
